everything/gitops/apps/stock/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-frontend
  namespace: stock
  labels:
    app: stock-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-frontend
  template:
    metadata:
      labels:
        app: stock-frontend
    spec:
      containers:
        - name: stock-frontend
          image: registry.lab.i-tems.com/stock-frontend:SEED
          ports:
            - containerPort: 3001
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 60
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 1Gi
