everything/gitops/apps/stock/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stock-frontend
  namespace: stock
  labels:
    app: stock-frontend
spec:
  type: ClusterIP
  selector:
    app: stock-frontend
  ports:
    - name: http
      port: 80
      targetPort: 3001
      protocol: TCP
