everything/gitops/apps/stock/frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stock-frontend
  namespace: stock
spec:
  ingressClassName: traefik
  rules:
    - host: bulls.i-tems.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stock-frontend
                port:
                  number: 80
